[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keithley_client"
version = "0.3.4"
description = "A client for the Keithley SourceMeter"
authors = [{ name = "Fabio Terranova" }]
license = { file = "LICENSE" }
readme = "README.md"
dependencies = [
	"argparse",
	"platformdirs",
	"numpy",
	"pandas",
	"pyqt5",
	"pyqtgraph",
	"pyvisa-py",
	"pyUSB",
	"gpib-ctypes",
	"matplotlib",
	"toml",
]

[project.scripts]
keithley_client = "keithley_client:cli"

[tool.hatch.envs.default]
dependencies = ["pre-commit"]
